AWS/AWS-Services/VPC/Real_tasks/_4b_SSM_Private_Subnet_With_NAT/subnet.tf
# -----------------------------------------------------------------
# Creating Public Subnet for NAT Gateway
# -----------------------------------------------------------------
resource "aws_subnet" "public" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.0.1.0/24"
  availability_zone       = "us-east-1a"
  map_public_ip_on_launch = true

  tags = {
    Name = "public-subnet"
  }
}
# -----------------------------------------------------------------
# Creating Private Subnet
# -----------------------------------------------------------------

resource "aws_subnet" "private" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.2.0/24"
  availability_zone = "us-east-1a"

  tags = {
    Name = "private-subnet"
  }
}

# -----------------------------------------------------------------
# Creating Internet Access via IGW for Public Subnet
# -----------------------------------------------------------------
resource "aws_route_table" "public_rt" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }

  tags = {
    Name = "public-rt"
  }
}

# -----------------------------------------------------------------
# Associating Public Subnet with Route Table
# -----------------------------------------------------------------



resource "aws_route_table_association" "public_assoc" {
  subnet_id      = aws_subnet.public.id
  route_table_id = aws_route_table.public_rt.id
}

# -----------------------------------------------------------------
# Creating NAT Gateway in Public Subnet
# -----------------------------------------------------------------

resource "aws_eip" "nat_eip" {
  domain = "vpc"

  tags = {
    Name = "nat-eip"
  }
}

resource "aws_nat_gateway" "nat" {
  allocation_id = aws_eip.nat_eip.id
  subnet_id     = aws_subnet.public.id

  tags = {
    Name = "nat-gateway"
  }
}





# -----------------------------------------------------------------
# Associating Public Subnet with Route Table
# -----------------------------------------------------------------

resource "aws_route_table" "private_rt" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.nat.id
  }

  tags = {
    Name = "private-rt"
  }
}

# -----------------------------------------------------------------
# Associating Private Subnet with Route Table
# -----------------------------------------------------------------

resource "aws_route_table_association" "private_assoc" {
  subnet_id      = aws_subnet.private.id
  route_table_id = aws_route_table.private_rt.id
}
